fixed alignment

--- a/css/lmf.css
+++ b/css/lmf.css
@@ -218,14 +218,6 @@ h2 {
         margin: 25px 5%;
 
     }
-
-    .jp-logo {
-        margin: 15% 0 !important;
-    }
-
-    .cfw-logo {
-        margin: 10% 0 !important;
-    }
 }
 
 @media (max-width: 500px) {
@@ -252,12 +244,10 @@ h2 {
 
 .jp-logo {
     border: 0 !important;
-    margin: 30% 0;
 }
 
 .cfw-logo {
     border: 0 !important;
-    margin: 20% 0;
 }
 
 .break-word {
